# wololo-bot

./: .gitignore  Cargo.toml  README.md
migrations/: 20241026203204_users_and_channel.sql  20241027192654_add_last_notified_column_to_ping_list.sql  20241029002520_add_admin_and_black_list.sql  20241102191709_create_notification_message_child_messages.sql  20241102192128_create_unique_index_for_message_children.sql  20241102201130_add_channel_ids_to_message_children.sql
src/: constants.rs  main.rs  queries.rs  structs.rs  util.rs  writes.rs
