[package]
name = "wololo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["macros", "time"] }
tokio = "1.26.0"
tracing = "0.1.37"
chrono = "0.4.38"
